--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,68 @@
-body{
-    margin: 0;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+
+* {
+    font-family: "Roboto";
     background-color: black;
 }
 
-.nav-items{
-    list-style: none;
-    color: white;
-    display: flex;
-flex-direction: row;
-justify-content: space-evenly;
-position: relative;
-color: white;
+header {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
 
-li a{
-    font-size: ;
+    align-items: center;
+}
+
+header a {
+    color: white;
+
+
 }
 
 
-.nav-items li:nth-child(1){
-    margin-left: 12px;
-    padding-right: 100px;
 
+.nav-links {
+    list-style: none;
+
+    display: flex;
+    align-items: center;
+}
+
+.nav-links li a {
+    text-decoration: none;
+    padding: 0px 20px;
+
+}
+
+.logo {
+    padding: 0px 12px;
+    display: inline;
+    list-style: none;
+    text-decoration: none;
+
+}
+
+.hero-image {
+    position: relative;
+    text-align: center;
+
+}
+
+.hero-title,h1 {
+    color: white;
+    position:absolute;
+    left: 50%;
+    top: 50%;
+    background-color: transparent;
+
+}
+
+h1{
+    width: 100%;
+    height: 200px;
+    white-space: nowrap
     
+}
+
+img {
+    width: 100%
 }
