--- a/css/styles.css
+++ b/css/styles.css
@@ -2,67 +2,120 @@
 
 * {
     font-family: "Roboto";
-    background-color: black;
+    max-width: 100%;
 }
 
 header {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-
+    background-color: black;
+    display: flex;
+    grid-template-columns: 100%;
     align-items: center;
 }
 
 header a {
     color: white;
-
-
 }
 
-
-
 .nav-links {
-    list-style: none;
-
+    margin-left: ;
     display: flex;
     align-items: center;
+    list-style: none;
 }
 
 .nav-links li a {
     text-decoration: none;
-    padding: 0px 20px;
-
+    padding: 0px 50px;
 }
 
-.logo {
-    padding: 0px 12px;
+#logo {
     display: inline;
+    padding: 0px 2em;
     list-style: none;
     text-decoration: none;
-
+    justify-content: start;
+    align-items: center;
 }
 
-.hero-image {
+.hero-image img {
     position: relative;
     text-align: center;
-
-}
-
-.hero-title,h1 {
-    color: white;
-    position:absolute;
-    left: 50%;
-    top: 50%;
-    background-color: transparent;
-
-}
-
-h1{
     width: 100%;
-    height: 200px;
-    white-space: nowrap
+}
+
+h1 {
+    white-space: nowrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+    font-size: 90px;
+    left: 50%;
+    right: 50%;
+    bottom: 50%;
+}
+
+.hero-title, h1 {
+    color: white;
+    position: absolute;
+    left: 50%;
+    bottom: 50%;
+    white-space: nowrap;
+}
+
+.date-container>p {
+    margin-top: 12%;
+    margin-bottom: 5%;
+    display: flex;
+    padding: 12px 5px;
+    box-sizing: border-box;
+    border: 2px solid black;
+    width: 85%;
+}
+
+.date-container {
+    display: flex;
+    justify-content: center;
+    width: 90%;
+    margin-right: 20px;
+}
+
+.event-section {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin: 40px 0px;
+    padding: 20px 0px;
     
 }
 
-img {
-    width: 100%
+.event-content-container {
+    display: grid;
+    grid-template-columns: repeat(3, 400px);
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 30px;
+    
+}
+
+.event-image {
+    width: 200px;
+    display: flex;
+    padding: 0px 25%;
+
+}
+
+.event-info {
+    display: grid;
+    grid-template-rows: repeat(4, 50%);
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20px;
+    width: 80px;
+    white-space: nowrap;
 }
